tests/compile/with_multi_await.stderr
error: spandoc does not support instrumenting multiple awaits with a single span
  --> $DIR/with_multi_await.rs:21:9
   |
21 |         fut3.await
   |         ^^^^^^^^^^
